--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-title: My Personal Blog
-description: Thoughts, projects, and things I’m learning
+title: InsiderIQ Pro's Daily Insider Filings Review
+description: SEC form 4 breakdowns and analysis
 theme: minima
