--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
 title: InsiderIQ Pro's Daily Insider Filings Review
 description: SEC form 4 breakdowns and analysis
 theme: minima
+
+url: https://www.insideriqpro.com
+baseurl: ""
